tests/miniJava/neg/004174_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java extends public int [] java ( ) { return 0 ; } java { }
